--- a/HiChongSwift/AboutMe.storyboard
+++ b/HiChongSwift/AboutMe.storyboard
@@ -2819,6 +2819,6 @@ DQ0
         <image name="sqMale" width="15" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="7Mw-dF-Oq3"/>
+        <segue reference="FEF-1z-blp"/>
     </inferredMetricsTieBreakers>
 </document>
